# Task1_CV

./: CMakeLists.txt  README.md  cv_test.cpp  frequency.h  histogram.cpp  histogram.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  testing.cpp  testing.h
Project files/: mainwindow.cpp  mainwindow.h  mainwindow.ui
test2-cv/build-task2_cv-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
test2-cv/build-task2_cv-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp
test2-cv/task2_cv/: functions.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  task2_cv.pro  testing.cpp  testing.h
